added command urlsafe: it is now possible to type urlsafe and the bot answers whether the url is safe or not, based on the VirusTotal api

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"dev": "nodemon .",
 		"lint": "eslint ./ --ext .js"
 	},
-
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/RuyiLi/hacktoberfest-akairo-bot.git"
@@ -27,6 +26,7 @@
 		"bot"
 	],
 	"dependencies": {
+		"axios": "^0.19.0",
 		"common-tags": "^1.8.0",
 		"discord-akairo": "discord-akairo/discord-akairo",
 		"discord.js": "discordjs/discord.js"
