--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"axios": "^0.19.0",
 		"common-tags": "^1.8.0",
 		"discord-akairo": "discord-akairo/discord-akairo",
-		"discord.js": "discordjs/discord.js"
+		"discord.js": "discordjs/discord.js",
+		"pluralize": "^8.0.0"
 	},
 	"devDependencies": {
 		"dotenv": "^8.1.0",
