--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
 	],
 	"dependencies": {
 		"axios": "^0.19.0",
+		"chalk": "^2.4.2",
 		"common-tags": "^1.8.0",
 		"discord-akairo": "discord-akairo/discord-akairo",
-		"discord.js": "discordjs/discord.js"
+		"discord.js": "discordjs/discord.js",
+		"moment": "^2.24.0",
+		"pluralize": "^8.0.0"
 	},
 	"devDependencies": {
 		"dotenv": "^8.1.0",
